# PyTorchFire_experiments

./: .gitignore  README.md  initial_notebook.ipynb  pyproject.toml  stare_hory_sim.py
